Fix missing color variable, coordinate log inputs to change with theme selector

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -408,6 +408,7 @@ border-radius: 33px;
   border-radius:35px;
   height:2rem;
   border-color:transparent;
+  background-color:var(--primary-light);
 }
 .log_btn{
   width:30%;
